# AlbionKillboardImage

./: CMakeLists.txt  README.md  albion_item.cpp  albion_item.h  bot.cpp  image_generator.cpp  image_generator.h  price_evaluator.cpp  price_evaluator.h  utility.cpp  utility.h
cmake/: cpr.cmake  dpp.cmake  opencv.cmake
src/: CMakeLists.txt
src/bot/: CMakeLists.txt  bot.cpp  bot.sh
src/image/: CMakeLists.txt  albion_item.cpp  image_generator.cpp  price_evaluator.cpp  utility.cpp
src/image/include/image/: albion_item.h  image_generator.h  price_evaluator.h  utility.h
